<resources>
    <string name="appName">NameTrainer</string>
    <string name="action_settings">Settings</string>

    <!-- OPTIONS -->
    <string name="options">Optionen</string>
    <string name="groupeditor">Gruppenauswahl</string>

    <string name="sound_options">Ton An/Aus</string>
    <string name="sound_state_key">Sound_Key</string>

    <string name="lastName_options">Nachname Abfragen</string>
    <string name="lastName_state_key">LastName_Key</string>

    <string name="on">An</string>
    <string name="off">Aus</string>


    <!-- GROUP EDITOR -->
    <string name="groupeditor_item_dialog_title">Optionen</string>
    <string-array name="groupeditor_item_dialog_options">
        <item>Bearbeiten</item>
        <item>Löschen</item>
    </string-array>

    <string name="groupeditor_add_action_title">Gruppe hinzufügen</string>
    <string name="groupeditor_add_action_edittext">Gruppenname</string>

    <string name="groupeditor_add_action_posbutton">Hinzufügen</string>
    <string name="groupeditor_add_action_negbutton">Abbrechen</string>

    <string name="groupeditor_edit_action_posbutton">Bearbeiten</string>
    <string name="groupeditor_edit_action_negbutton">Abbrechen</string>

    <string name="groupeditor_member_edit_posbutton">Bearbeiten</string>
    <string name="groupeditor_member_edit_negbutton">Abbrechen</string>

    <string name="groupeditor_gallerychooser_title">Bild auswählen</string>

    <!-- Labels -->
    <string name="selection_label">Gruppenauswahl</string>
    <string name="game_label">g</string>
    <string name="label_total_score">Punkte:</string>
    <string name="label_wrong_matches_title">Falsche Aktionen:</string>
    <string name="label_group_title">Gruppennamen:</string>

    <!-- Button Titles -->
    <string name="button_title_cancel">Abbrechen</string>
    <string name="button_title_add">Hinzufügen</string>
    <string name="button_title_back_menu">Zum Menü</string>
    <string name="button_title_play_again">Nochmal Spielen</string>

    <!-- Hints -->
    <string name="hint_firstname">Vorname</string>
    <string name="hint_surname">Nachname</string>
    <string name="hint_image">Bild</string>

    <!-- User Info Strings -->
    <string name="user_info_create_groups">Keine Gruppen zum Spielen gefunden! Bitte erstellen Sie welche!</string>
    <string name="user_info_missing_member_info" formatted="false">Vornamen %s \n Nachnamen %s</string>
    <string name="user_info_missing_image">Bild ist %s</string>
    <string name="user_info_missing_group_info">Gruppenname ist %s</string>

    <!-- Errors -->
    <string name="error_input_too_short">zu kurz</string>
    <string name="error_input_okay">okay</string>
    <string name="error_input_too_long">zu lang</string>
    <string name="error_image_available">vorhanden</string>
    <string name="error_image_unavailable">nicht vorhanden</string>

    <!-- Description -->



    <!-- Prefix Strings -->
    <string name="prefix_students_count">Schüler: %s</string>

    <!-- Menu Strings -->
    <string name="menu_selection_settings">Einstellungen</string>
    <string name="menu_selection_editor">Gruppeneditor</string>

    <!-- Key Strings -->
    <string name="letter_tag_key">letter_tag</string>
    <string name="letter_count_tag_key">letter_count</string>

    <!-- Unorganized Strings -->
    <string name="add">add</string>
    <string name="name_trainer">Name Trainer</string>
    <string name="start">Start</string>
    <string name="settings">Einstellungen</string>
    <string name="share">Teilen</string>
    <string name="exit">Beenden</string>
    <string name="Group_edit">Gruppe editieren</string>
    <string name="member_tag">tagForMemberData</string>


</resources>