<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/textViewSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_options"
        android:textAppearance="?android:textAppearanceLarge" />


    <Switch
        android:id="@+id/toggleButtonSound"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:text="@string/sound_options" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName_options"
        android:textAppearance="?android:textAppearanceLarge" />

    <Switch
        android:id="@+id/toggleButtonLastName"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:text="@string/lastName_options" />

</LinearLayout>