<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/label_total_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/total_score_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/label_wrong_matches_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/wrong_matches_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/label_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/play_again_group_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        </LinearLayout>

    <Button
        android:id="@+id/play_again_button"
        android:text="@string/button_title_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPlayAgain"/>

    <Button
        android:id="@+id/back_menu_button"
        android:text="@string/button_title_back_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBackToMenu"/>

</LinearLayout>